// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthPageLayout renders forgot password page correctly 1`] = `
<div>
  <main
    class="flex min-h-screen flex-col items-center justify-center gap-6"
    id="main-content"
  >
    <h1
      class="text-2xl font-bold"
    >
      Forgot Password
    </h1>
    <div>
      Forgot Password Form
    </div>
  </main>
</div>
`;

exports[`AuthPageLayout renders login page correctly 1`] = `
<div>
  <main
    class="flex min-h-screen flex-col items-center justify-center gap-6"
    id="main-content"
  >
    <h1
      class="text-2xl font-bold"
    >
      Login
    </h1>
    <div>
      Login Form
    </div>
    <a
      class="text-accent-yellow hover:underline"
      href="/forgot-password"
    >
      Forgot password?
    </a>
  </main>
</div>
`;
